# goit_homework_M2T1

./: Dockerfile  README.md  app.py  logs.txt  pyproject.toml  requirements.txt
